config/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-test-svc
  namespace: my-test
spec:
  ports:
    - port: 4000
      protocol: TCP
      targetPort: 4000
  selector:
    app: test
    component: backend
